# ShabbOS

./: Cargo.toml  README.md
.cargo/: config.toml
src/: macros.rs  main.rs  panic.rs  serial.rs  testing.rs  tests.rs  vga_buffer.rs
src/cpu_interrupts/: gdt.rs  hardware.rs  idt.rs  mod.rs
src/dynamic_mem/: allocator.rs  heap_errors.rs  heap_vpage_allocator.rs  mod.rs
src/paging/: frame_allocator.rs  mapping.rs  mod.rs  setup.rs
src/utils/: locker.rs  mod.rs
src/vga/: vga_buffer.rs
