[package]
name = "ShabbOS"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
[[bin]]
name ="ShabbOS"
test = false
bench = false
